# alaan-slack-indexed-mcp-tool

./: .gitignore  CLAUDE.md  README.md  embedder.py  pyproject.toml  reranker.py  server.py  vector_store.py
