[project]
name = "slack-indexed"
version = "0.1.0"
description = "MCP server for semantic search over indexed Slack channels in Qdrant with Cohere reranking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.6",
    "cohere>=5.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.4",
    "qdrant-client>=1.12.0",
]

[project.scripts]
slack-indexed = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
force-include = { "server.py" = "server.py", "embedder.py" = "embedder.py", "vector_store.py" = "vector_store.py", "reranker.py" = "reranker.py" }

[tool.hatch.build.targets.sdist]
force-include = { "server.py" = "server.py", "embedder.py" = "embedder.py", "vector_store.py" = "vector_store.py", "reranker.py" = "reranker.py" }
